Fix thumbnail columns width
Fix thumbnails being display in 2 columns instead of 3 due to a wider scrollbar on some browsers.

--- a/app/Resources/scss/sections/_thumbnails.scss
+++ b/app/Resources/scss/sections/_thumbnails.scss
@@ -5,7 +5,7 @@
 }
 
 .thumbnails_list {
-    margin: round($grid / 4);
+    margin: floor($grid / 4);
 }
 
 .thumbnails_item {
